...
            android:textSize="13sp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            style="@style/Widget.Material3.Button"
            android:text="Delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/alerta_primary"
            android:fontFamily="@font/inter"
...
